--- a/package.json
+++ b/package.json
@@ -11,13 +11,33 @@
   "dependencies": {
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.12",
+    "expo-asset": "~8.7.0",
+    "expo-document-picker": "~11.0.1",
+    "expo-file-system": "~15.1.1",
+    "expo-sharing": "~11.0.1",
+    "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
+    "pod-install": "^0.1.38",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-svg": "13.4.0"
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "13.4.0",
+    "uuid": "^9.0.0",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/salat4/water-tracker.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/salat4/water-tracker/issues"
+  },
+  "homepage": "https://github.com/salat4/water-tracker#readme",
+  "description": ""
 }
